tests/NormalTests/paczka1/small_fuzzy/54214401.err
Error in line 1: uSohfT A831 8%,2
Error in line 10: tVOz0CcB S329 41,1
Error in line 13: A845 A845 36,7
